force-app/main/default/objects/FixMyStreet_Updates__mdt/FixMyStreet_Updates__mdt.object-meta.xml
<CustomObject>
    <label>FixMyStreet Updates</label>
    <pluralLabel>FixMyStreet Updates</pluralLabel>
</CustomObject>