force-app/main/default/objects/FixMyStreet_Updates__mdt/fields/FMS_Status__c.field-meta.xml
<CustomField>
    <fullName>FMS_Status__c</fullName>
    <label>FMS Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>