force-app/main/default/objects/FixMyStreet_Updates__mdt/fields/Update_Text__c.field-meta.xml
<CustomField>
    <fullName>Update_Text__c</fullName>
    <label>Update Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>