force-app/main/default/objects/FixMyStreet_Updates__mdt/listViews/updates.listView-meta.xml
<ListView>
    <fullName>updates</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Status__c</columns>
    <columns>Update_Text__c</columns>
    <columns>Closed__c</columns>
    <columns>Fixed__c</columns>
    <columns>FMS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>updates</label>
</ListView>